tests/samples/valid/HelloWorldAchievement.py
# cases where HelloWorldAchievement should unlock

# >> CASE
print('hello world!')

# >> CASE
print('Hello world', end='')

# >> CASE
print('Hello World')
