tests/samples/invalid/HelloWorldAchievement.py
# cases where HelloWorldAchievement should not unlock

# >> CASE
print(123)

# >> CASE
print('hello wrold')

# >> CASE
print('helol world')

# >> CASE
print('helloworld', end='')
